src/test/deca/syntax/invalid/test_synt/control_structures/while_semicolon.deca
// Description:
//    Declaration dun while avec ;
//
// Resultats:
//    Pas d'erreur
//
// Historique:
//    cree le 14/01/2022

{
    while(true);
}